Fixed the add game form and game list thumbnail layout issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -61,7 +61,9 @@ h5 {
     margin-left: 0px !important;
     margin-right: 20px !important;
 }
-
+.thumbnails li img{
+    height: 144px;
+}
 legend {
     font-family: 'Andika';
 }
@@ -98,32 +100,3 @@ legend {
     margin: 10px 4px;
 }
 
-/* Social proof buttons from GitHub & Twitter */
-.bs-docs-social {
-    padding: 15px 0;
-    text-align: center;
-    background-color: #f5f5f5;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #ddd;
-}
-
-/* Quick links on Home */
-.bs-docs-social-buttons {
-    margin-left: 0;
-    margin-bottom: 0;
-    padding-left: 0;
-    list-style: none;
-}
-
-.bs-docs-social-buttons li {
-    display: inline-block;
-    padding: 5px 8px;
-    line-height: 1;
-    *display: inline;
-    *zoom: 1;
-}
-
-.well h3 {
-    margin-top: 0px;
-    margin-bottom: 0px;
-}
